oxiplate-derive/tests/broken/derive/inline-equals.stderr
error: Incorrect syntax for inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/inline-equals.rs:4:3
  |
4 | #[oxiplate_inline = "foo"]
  |   ^^^^^^^^^^^^^^^^^^^^^^^
